# cmaketest

./: CMakeLists.txt  README.md
op/: CMakeLists.txt  op.cpp  op.h
tests/: CMakeLists.txt  cmaketest.cpp
